# CoffeeShop

./: .gitignore  JWT_AUTHENTICATION_ENHANCEMENT.md  ORACLE_CLOUD_DEPLOYMENT.md  README.md  REDIS_CONFIGURATION.md  SECURITY.md  STATIC_FILES_FIX.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  render.yaml
backend/: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/api/: admin.py  apps.py  cloudinary_config.py  jwt_serializers.py  jwt_test_views.py  jwt_views.py  models.py  permissions.py  tasks.py  urls.py
backend/api/email_template/: reservation_confirmation.html
backend/api/fields/: CustomCloudinaryField.py  __init__.py
backend/api/migrations/: 0001_initial.py  0002_alter_customuser_role.py  0002_alter_team_image.py  0003_category_images_order_orderitem_product_reservation_and_more.py  0003_product_created_at_product_updated_at.py  0004_product_thumbnail.py  0005_product_product_description.py  0006_alter_product_thumbnail.py  0007_reservation_number_of_people.py  0008_cart_cartitem.py  0009_alter_product_updated_at.py
backend/api/models/: Cart.py  CartItem.py  Category.py  CustomUser.py  Images.py  Order.py  OrderItem.py  Product.py  Reservation.py  Review.py  Team.py  Teammate.py  __init__.py
backend/api/serializers/: CartItemSerializer.py  CartSerializer.py  CategorySerializer.py  CustomUserSerializer.py  ImageSerializer.py  OrderItemSerializer.py  OrderSerializer.py  ProductSerializer.py  ReservationSerializer.py  __init__.py  (+3 more)
backend/coffee_api/: asgi.py  celery.py  logging_config.py  settings.py  urls.py  wsgi.py
(+68 files in other folders)
